modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/product.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html 	deleted:    15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/index.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/product.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/product.css
@@ -6,6 +6,11 @@
     background-color: aliceblue;
 }
 
+.continue-shopping button{
+  padding: .5em 1em;
+  border-radius: 5px;
+}
+
 .product-image-card {
   display: block;
   width: 40%;
