--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html
@@ -7,6 +7,7 @@
     
 
 {% block content %}
+    {% include 'store/include/hero.html' %}
     {% include 'store/card.html' %}
     <a href="{% url 'checkout' %}">checkout</a>
     <a href="{% url 'cart' %}">cart</a>
