modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html
@@ -11,11 +11,10 @@
     <section>
         <h3 class="section-title">Products</h3>
         <div class= "product-container">
-            {% include 'store/card.html' %}
-            {% include 'store/card.html' %}
-            {% include 'store/card.html' %}
-            {% include 'store/card.html' %}
-            {% include 'store/card.html' %}
+            
+            {% for product in products %}
+            {% include 'store/include/product_card.html' %}
+            {% endfor %}
         </div>
     </section>
 
