modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/settings.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/urls.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/media/uploads/products/childrens-shoes-3104832_1280.jpg 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/media/uploads/products/leather-shoe-3706748_1280.jpg 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/media/uploads/products/shoe-2258549_1280.jpg 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/product_card.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/product_card.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/product_card.html
@@ -1,7 +1,7 @@
 
 <div class="product-card">
     <div class="product-image">
-        <a href="{% url 'product' product.id %}"><img src="{{ product.image.url }}" alt="product" width="100%"></a>
+        <a href="{% url 'product' product.id %}"><img src="{{ product.imageURL }}" alt="product" width="100%"></a>
     </div>
     <div class="card-text">
         <h4>{{ product.name }}</h4>
