modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/media/uploads/products/black-shoes-589195_1280.jpg 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/media/uploads/products/sandal-669372_1280.jpg 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/navbar.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/featured.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/home.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/new.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/sale.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/featured.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/featured.html
@@ -7,5 +7,13 @@
     
 
 {% block content %}
-    <h1>featured</h1>
+{% include 'store/include/hero.html' %}
+<section>
+    <h3 class="section-title">Featured Products</h3>
+    <div class= "product-container">
+        {% for product in products %}
+        {% include 'store/include/product_card.html' %}
+        {% endfor %}
+    </div>
+</section>
 {% endblock content %}
