--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/sale.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/sale.html
@@ -1,11 +1,20 @@
 {% extends 'store/base.html' %}
-
+{% load static %}
 
 {% block title %}
-    sale
+    Sale
 {% endblock title %}
     
 
 {% block content %}
-    <h1>sale</h1>
+    {% include 'store/include/hero.html' %}
+    <section>
+        <h3 class="section-title">Products on Sale</h3>
+        <div class= "product-container">
+            {% for product in products %}
+            {% include 'store/include/product_card.html' %}
+            {% endfor %}
+        </div>
+    </section>
 {% endblock content %}
+    
