modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -63,7 +63,7 @@
                     <option value="{{ quantity }}">{{ quantity }}</option>
                 {% endfor %}
             </select> -->
-            <button type="button" value="{{ product.id }}" id="add-cart">Add to Cart</button>
+            <button type="button" value="{{ product.id }}" id="add-cart" class="add-to-cart">Add to Cart</button>
         </div>
     </div>
 </div>
