--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -26,6 +26,26 @@
     </div>
     {% include 'store/include/footer.html' %}
     </div>
+
+
+    <script>
+        $(document).on('click', '.add-to-cart', function(e){
+            e.preventDefault();
+            $.ajax({
+                type: 'POST',
+                url: '{% url "cart_add" %}',
+                data: {
+                    product_id: $('.add-to-cart').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                    action: 'post'
+                },
+                success: function(json){
+                    document.getElementsByClassName('cart-quantity').textContent = json.qty
+                },
+            })
+
+        })
+    </script>
         
 </body>
 </html>
