modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -27,6 +27,7 @@
     {% include 'store/include/footer.html' %}
     </div>
 
+    
 
     <script>
         $(document).on('click', '.add-to-cart', function(e){
@@ -39,9 +40,13 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}',
                     action: 'post'
                 },
+
                 success: function(json){
-                    document.getElementsByClassName('cart-quantity').textContent = json.qty
-                },
+                $('.cart-quantity').text(json.qty);
+            },
+                // success: function(json){
+                //     document.getElementsByClassName('cart-quantity').textContent = json.qty
+                // },
             })
 
         })
