--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/hero.css' %}">
     <link rel="stylesheet" href="{% static 'css/product_card.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/cart.css' %}">
     <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
 
+  
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -28,29 +30,29 @@
     </div>
 
     
-
-   <script>
+    <script src="{% static 'js/navbar.js' %}"></script>
+    <script>
     $(document).on('click', '.add-to-cart', function(e){
-    e.preventDefault();
-    var productId = $(this).val(); // Get the value of the clicked button (which is the product ID)
-    $.ajax({
-        type: 'POST',
-        url: '{% url "cart_add" %}',
-        data: {
-            product_id: productId,
-            csrfmiddlewaretoken: '{{ csrf_token }}',
-            action: 'post'
-        },
-        success: function(json){
-            $('.cart-quantity').text(json.qty);
-        },
-        error: function(xhr, errmsg, err){
-            // Handle error
-        }
+        e.preventDefault();
+        var productId = $(this).val(); // Get the value of the clicked button (which is the specific product ID)
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart_add" %}',
+            data: {
+                product_id: productId,
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                action: 'post'
+            },
+            success: function(json){
+                $('.cart-quantity').text(json.qty);
+            },
+            error: function(xhr, errmsg, err){
+                // Handle error
+            }
+        });
     });
-});
 
-   </script>
+    </script>
         
 </body>
 </html>
