--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/hero.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/hero.html
@@ -1,5 +1,5 @@
 <header>
     <div class="hero-header">
-        <h1>Bells Online Shop</h1>
+        <h1>Bella Online Shop</h1>
     </div>
 </header>
