modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/login.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3

--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/login.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/login.html
@@ -11,6 +11,7 @@
 
     <div class="form-container">
     <form action="" method="post" class="login-form">
+        {% csrf_token %}
         <div class="img">
             <span id="close" class="close"><a href="{% url 'home' %}">&times;</a></span>
             <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
