--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/checkout.html
@@ -41,12 +41,16 @@
             <h4>Order Summary</h4>
             <hr>
             <div class="cart-element">
-                <div class="cart-item-image"><img src="images/apples-805124.jpg" alt="" width="20%"></div>
-                <div class="cart-item-name">Product 1</div>
-                <div class="cart-item-quantity">3 
-                    <p><span>&#9652</span><span>&#9662</span></p>
+                
+                {% for item in cart_items %}
+                <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="20%"></div>
+                <div class="cart-item-name">{{ item.name }}</div>
+                <div class="cart-item-quantity">
+                    <p>X 3</p>
                 </div>
                 <div class="cart-item-total">$ 30</div>
+                {% endfor %}
+                
             </div>
             
             <p>Items: 1</p>
