--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -56,8 +56,10 @@
             
         </div>
         <div class="quantity">
-            <input type="number" value="1" min="1">
-            
+            <!-- <input type="number" value="1" min="1"> -->
+            <p>Quantity:
+            <span><input type="number" value="1" min="1" max="{{ stock_quantity }}"></span>
+            </p>
             <!-- <select id="qty-cart">
                 {% for quantity in quantity_list %}
                     <option value="{{ quantity }}">{{ quantity }}</option>
