modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -55,7 +55,7 @@
             </p>
             
         </div>
-        <div class="quantity">
+        <div class="order_quantity">
             <!-- <input type="number" value="1" min="1"> -->
             <p>Quantity:
             <span><input type="number" value="1" min="1" max="{{ stock_quantity }}"></span>
