--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -32,27 +32,29 @@
     
     <script src="{% static 'js/navbar.js' %}"></script>
     <script>
-    $(document).on('click', '.add-to-cart', function(e){
-        e.preventDefault();
-        var productId = $(this).val(); // Get the value of the clicked button (which is the specific product ID)
-        $.ajax({
-            type: 'POST',
-            url: '{% url "cart_add" %}',
-            data: {
-                product_id: productId,
-                csrfmiddlewaretoken: '{{ csrf_token }}',
-                action: 'post'
-            },
-            success: function(json){
-                $('.cart-quantity').text(json.qty);
-            },
-            error: function(xhr, errmsg, err){
-                // Handle error
-            }
+        $(document).on('click', '.add-to-cart', function(e){
+            e.preventDefault();
+            var productId = $(this).val(); // Get the value of the clicked button (which is the specific product ID)
+            var productQty = $(this).closest('.order_quantity').find('input[type="number"]').val(); // Get the quantity input value
+            $.ajax({
+                type: 'POST',
+                url: '{% url "cart_add" %}',
+                data: {
+                    product_id: productId,
+                    product_qty: productQty,
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                    action: 'post'
+                },
+                success: function(json){
+                    $('.cart-quantity').text(json.qty);
+                },
+                error: function(xhr, errmsg, err){
+                    // Handle error
+                }
+            });
         });
-    });
-
     </script>
+    
         
 </body>
 </html>
