modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/cart.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -38,7 +38,9 @@
             {% for item in cart_items %}
             <div class="cart-item-image"><img src="{{ item.imageURL }}" alt="" width="20%"></div>
             <div class="cart-item-name">{{item.name}}</div>
-            <div class="cart-item-quantity">3 
+            <div class="cart-item-quantity">
+                
+               {{ quantity }}
                 <p><span>&#9652</span><span>&#9662</span></p>
             </div>
             <div class="cart-item-total">$ {{item.price}}</div>
