--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -55,11 +55,11 @@
             </p>
             
         </div>
-        <div class="order_quantity">
+        <div class="quantity">
             <!-- <input type="number" value="1" min="1"> -->
-            <p>Quantity:
+            <p>Quantity
             <span><input type="number" value="1" min="1" max="{{ stock_quantity }}"></span>
-            </p>
+        </p>
             <!-- <select id="qty-cart">
                 {% for quantity in quantity_list %}
                     <option value="{{ quantity }}">{{ quantity }}</option>
