modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -57,9 +57,9 @@
         </div>
         <div class="quantity">
             <!-- <input type="number" value="1" min="1"> -->
-            <p>Quantity
+            <p>Quantity:  
             <span><input type="number" value="1" min="1" max="{{ stock_quantity }}"></span>
-        </p>
+            </p>
             <!-- <select id="qty-cart">
                 {% for quantity in quantity_list %}
                     <option value="{{ quantity }}">{{ quantity }}</option>
