modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/cart.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3

--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -40,8 +40,18 @@
             <div class="cart-item-name">{{item.name}}</div>
             <div class="cart-item-quantity">
                 
-               {{ quantity }}
-                <p><span>&#9652</span><span>&#9662</span></p>
+              
+               
+               {% for key, value in cart_quantities.items %}
+                    
+                    {% if key == product.id|slugify %}
+                        {{ value }}
+                    {% endif %}
+                        
+               {% endfor %}
+                
+
+                <!-- <p><span>&#9652</span><span>&#9662</span></p> -->
             </div>
             <div class="cart-item-total">$ {{item.price}}</div>
             {% endfor %}
